--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Apple Pay Demo</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="frontend/style.css">
+        <link rel="stylesheet" href="./frontend/style.css">
     </head>
     <body>
         <div class="apple-pay-button"></div>
@@ -12,6 +12,6 @@
             <hr/>
             <h2>Congrats, order done!</h2>
         </div>
-        <script src="frontend/applepay.js" style="display: none;"></script>
+        <script src="./frontend/applepay.js" style="display: none;"></script>
     </body>
 </html>
