--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Apple Pay Demo</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href=".\frontend\style.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
     </head>
     <body>
         <div class="apple-pay-button"></div>
