--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
             <hr/>
             <h2>Congrats, order done!</h2>
         </div>
-        <script src=".\frontend\applepay.js" style="display: none;"></script>
+        <script src=".\frontend\applepay.js"></script>
     </body>
 </html>
