--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
     </head>
     <body>
-        <div class="apple-pay-button">test</div>
+        <div class="apple-pay-button"></div>
         <div id="success">
             <hr/>
             <h2>Congrats, order done!</h2>
